--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-nbody {
+nnbody {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
